[LPL] fixed verified icon not showing up (fixes #204)

--- a/twitter.gt2eb.style.scss
+++ b/twitter.gt2eb.style.scss
@@ -782,6 +782,7 @@ main {
     font-size: incr(18px);
     font-weight: bold;
     color: var(--color-text) !important;
+    font-weight: 800;
   }
   .gt2-legacy-profile-screen-name {
     font-size: incr(14px);
